[package]
name = "reconblitz"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
docker-api = "0.3.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
anyhow = "1.0"
html-escape = "0.2.11"
futures = "0.3"
shell-words = "1.1.0"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_env_logger = "0.5.0"

[build-dependencies]
vergen = { version = "7", features = ["build", "git", "git2"] }

[[test]]
name = "basic_tests"
path = "tests/basic_tests.rs"

[[test]]
name = "concurrency_tests"
path = "tests/concurrency_tests.rs"
